Task 012 - UI - Header alignment corrections

--- a/src/app/header/components/header.component.css
+++ b/src/app/header/components/header.component.css
@@ -4,7 +4,6 @@
 
 .user-name {
   color: #fff;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   margin-right: 12px;
   display: flex;
   align-items: center;
